--- a/stylua.toml
+++ b/stylua.toml
@@ -1,3 +1,5 @@
+column_width = 100
 indent_type = "Spaces"
+quote_style = "AutoPreferSingle"
 indent_width = 2
-column_width = 120
+no_call_parentheses = true
